--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
         "BOT_USERNAME": {
             "description": "fill with your bot username without @ (@ නොමැතිව ඔබගේ බොට් පරිශීලක නාමය පුරවන්න)",
             "required": true,
-            "value": "songdownload_music_world_bot"
+            "value": "Lizamusickbot"
         },
         "ASSISTANT_NAME": {
             "description": "fill with the assistant username without @ (@ නොමැතිව සහකාර පරිශීලක නාමය පුරවන්න)",
@@ -52,12 +52,12 @@
         "OWNER_NAME": {
             "description": "fill with your username without @ (@ නොමැතිව ඔබගේ පරිශීලක නාමය පුරවන්න)",
             "required": false,
-            "value": "AnujaSupulsara"
+            "value": "MRUSHAN"
         },
         "ALIVE_NAME": {
             "description": "fill with the nickname of your telegram account (ඔබගේ ටෙලිග්‍රාම් ගිණුමේ අන්වර්ථ නාමය පුරවන්න)",
             "required": false,
-            "value": "AnujaSupulsara"
+            "value": "MRUSHAN"
         },
         "API_ID": {
             "description": "your Api ID from my.telegram.org/apps ( ඔබේ Api ID එක my.telegram.org/apps)",
@@ -79,12 +79,12 @@
         "UPDATES_CHANNEL": {
             "description": "if you have channel fill the channel username here without @ (ඔබට නාලිකාව තිබේ නම් @ නොමැතිව නාලිකා පරිශීලක නාමය මෙහි පුරවන්න)",
             "required": false,
-            "value": "Musicworldanu"
+            "value": "t.me/httpMUSICWorld"
         },
         "GROUP_SUPPORT": {
             "description": "if you have group fill the group username here without @ (ඔබට කණ්ඩායමක් ඇත්නම් @ නොමැතිව කණ්ඩායම් පරිශීලක නාමය පුරවන්න)",
             "required": false,
-            "value": "anujasu"
+            "value": "t.me/Miusicworldchat"
         }
     },
     "buildpacks": [
